Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53937

AnimatedSprite source change causes infinite loop in QQuickSpriteEngine::assembledImage()

XMLWordPrintable

    • b61c774ce58d15bfc26a2a75b55e3f5eefbcdcc2

      Steps to reproduce the issue:

      • Extract the attached file (animatedSpriteInfiniteLoop.zip) and run it with "qmlscene animatedSpriteInfiniteLoop.qml"
      • Click on it.

      Outcome:
      The process enters into an infinited loop inside QQuickSpriteEngine::assembledImage(). More speficically inside "while (framesLeft > 0)

      {...}

      " as framesLeft is never decremented because "copied/frameWidth" in the expression "framesLeft -= copied/frameWidth;" always resolves to zero because copied < frameWidth.

      Comments:
      Got a simple fix in the works.

        For Gerrit Dashboard: QTBUG-53937
        # Subject Branch Project Status CR V

            dandrader Daniel d'Andrada
            dandrader Daniel d'Andrada
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes