tests/auto/quick/qquickanimatedsprite/tst_qquickanimatedsprite.cpp
@@ -40,6 +40,7 @@
 #include <QtGui/qopenglcontext.h>
 #include <QtGui/qopenglfunctions.h>
 #include <QtGui/qoffscreensurface.h>
+#include <QtQml/qqmlproperty.h>
 
 class tst_qquickanimatedsprite : public QQmlDataTest
 {
@@ -55,6 +56,7 @@ private slots:
     void test_largeAnimation_data();
     void test_largeAnimation();
     void test_reparenting();
+    void test_changeSourceToSmallerImgKeepingBigFrameSize();
 };
 
 void tst_qquickanimatedsprite::initTestCase()
@@ -289,6 +291,43 @@ void tst_qquickanimatedsprite::test_reparenting()
     sprite->polish();
     QTRY_COMPARE(QQuickItemPrivate::get(sprite)->polishScheduled, true);
     QTRY_COMPARE(QQuickItemPrivate::get(sprite)->polishScheduled, false);
+}
+
+class KillerThread : public QThread
+{
+    Q_OBJECT
+protected:
+    void run() Q_DECL_OVERRIDE {
+        sleep(3);
+        qFatal("Either the GUI or the render thread is stuck in an infinite loop.");
+    }
+};
+
+// Regression test for QTBUG-53937
+void tst_qquickanimatedsprite::test_changeSourceToSmallerImgKeepingBigFrameSize()
+{
+    QQuickView window;
+    window.setSource(testFileUrl("sourceSwitch.qml"));
+    window.show();
+    QVERIFY(QTest::qWaitForWindowExposed(&window));
+
+    QVERIFY(window.rootObject());
+    QQuickAnimatedSprite* sprite = qobject_cast<QQuickAnimatedSprite*>(window.rootObject());
+    QVERIFY(sprite);
+
+    QQmlProperty big(sprite, "big");
+    big.write(QVariant::fromValue(false));
+
+    KillerThread *killer = new KillerThread;
+    killer->start(); // will kill us in case the GUI or render thread enters an infinite loop
+
+    QTest::qWait(50); // let it draw with the new source.
+
+    // If we reach this point it's because we didn't hit QTBUG-53937
+
+    killer->terminate();
+    killer->wait();
+    delete killer;
 }
 
 QTEST_MAIN(tst_qquickanimatedsprite)
